<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView_main_board"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:lines="1"
            android:text="@string/mainBoard"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/textView_mainBoard_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/noPairedDeviceFound"
            android:textSize="30sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/guideline1"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_connect_main_board"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:backgroundTint="@color/blue"
            android:text="@string/connect"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/guideline1"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_shotclock1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:lines="1"
            android:text="@string/shotclock1"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_main_board"/>

        <TextView
            android:id="@+id/textView_shotclock_1_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:layout_marginStart="30dp"
            android:text="@string/noPairedDeviceFound"
            android:textSize="30sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/guideline1"
            app:layout_constraintTop_toTopOf="@+id/textView_shotclock1"/>

        <Button
            android:id="@+id/btn_connect_shotclock1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:layout_marginStart="30dp"
            android:text="@string/connect"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/guideline1"
            app:layout_constraintTop_toTopOf="@+id/textView_shotclock1"/>

        <TextView
            android:id="@+id/textView_shotclock2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:lines="1"
            android:text="@string/shotclock2"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_shotclock1" />

        <TextView
            android:id="@+id/textView_shotclock_2_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:backgroundTint="@color/blue"
            android:text="@string/noPairedDeviceFound"
            android:textSize="30sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/guideline1"
            app:layout_constraintTop_toTopOf="@+id/textView_shotclock2" />

        <Button
            android:id="@+id/btn_connect_shotclock2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:backgroundTint="@color/blue"
            android:text="@string/connect"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/guideline1"
            app:layout_constraintTop_toTopOf="@+id/textView_shotclock2" />

        <TextView
            android:id="@+id/textView_shotclock3"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:lines="1"
            android:text="@string/shotclock3"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_shotclock2" />

        <TextView
            android:id="@+id/textView_shotclock_3_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:backgroundTint="@color/blue"
            android:text="@string/noPairedDeviceFound"
            android:textSize="30sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/guideline1"
            app:layout_constraintTop_toTopOf="@+id/textView_shotclock3" />

        <Button
            android:id="@+id/btn_connect_shotclock3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:backgroundTint="@color/blue"
            android:text="@string/connect"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/guideline1"
            app:layout_constraintTop_toTopOf="@+id/textView_shotclock3" />

        <TextView
            android:id="@+id/textView_shotclock4"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:lines="1"
            android:text="@string/shotclock4"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_shotclock3" />

        <TextView
            android:id="@+id/textView_shotclock_4_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:backgroundTint="@color/blue"
            android:text="@string/noPairedDeviceFound"
            android:textSize="30sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/guideline1"
            app:layout_constraintTop_toTopOf="@+id/textView_shotclock4" />

        <Button
            android:id="@+id/btn_connect_shotclock4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:backgroundTint="@color/blue"
            android:text="@string/connect"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/guideline1"
            app:layout_constraintTop_toTopOf="@+id/textView_shotclock4" />


        <com.google.android.material.slider.Slider
            android:id="@+id/slider_main_board"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:stepSize="5"
            android:valueFrom="10"
            android:valueTo="100"
            android:value="80"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_connect_main_board"
            app:layout_constraintTop_toTopOf="@+id/btn_connect_main_board"
            app:thumbColor="@color/blue"
            app:tickColorActive="@color/black"
            app:trackColor="@color/red" />

        <com.google.android.material.slider.Slider
            android:id="@+id/slider_shotclock1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:stepSize="5"
            android:valueFrom="10"
            android:valueTo="100"
            android:value="80"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_connect_shotclock1"
            app:layout_constraintTop_toTopOf="@+id/textView_shotclock1"
            app:thumbColor="@color/blue"
            app:tickColorActive="@color/black"
            app:trackColor="@color/red" />

        <com.google.android.material.slider.Slider
            android:id="@+id/slider_shotclock2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:stepSize="5"
            android:valueFrom="10"
            android:valueTo="100"
            android:value="80"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_connect_shotclock2"
            app:layout_constraintTop_toTopOf="@+id/textView_shotclock2"
            app:thumbColor="@color/blue"
            app:tickColorActive="@color/black"
            app:trackColor="@color/red" />

        <com.google.android.material.slider.Slider
            android:id="@+id/slider_shotclock3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:stepSize="5"
            android:valueFrom="10"
            android:valueTo="100"
            android:value="80"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_connect_shotclock3"
            app:layout_constraintTop_toTopOf="@+id/textView_shotclock3"
            app:thumbColor="@color/blue"
            app:tickColorActive="@color/black"
            app:trackColor="@color/red" />

        <com.google.android.material.slider.Slider
            android:id="@+id/slider_shotclock4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:stepSize="5"
            android:valueFrom="10"
            android:valueTo="100"
            android:value="80"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_connect_shotclock4"
            app:layout_constraintTop_toTopOf="@+id/textView_shotclock4"
            app:thumbColor="@color/blue"
            app:tickColorActive="@color/black"
            app:trackColor="@color/red" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="210dp"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>